Updated to new content

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,13 @@ github_username:  sharlos
 
 # Build settings
 markdown: kramdown
+
+
+collections:
+  project:
+    output: true
+  # thoughts:
+  #   output: true
+  # downloads:
+  #   output: true
+
