--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,7 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: Christopher Muller
 email: inbox@christophermuller.net
-description: > # this means to ignore newlines until "baseurl:"
-  I am a back-end developer with 4 years of experience making websites and web applications.
+description: "Website and portfolio of Christopher Muller, a web developer focusing on C# and ASP.NET."
 baseurl: "/sharlos.github.io" # the subpath of your site, e.g. /blog
 url: "http://christophermuller.net" # the base hostname & protocol for your site
 twitter_username: sharlos
@@ -18,12 +10,6 @@ github_username:  sharlos
 # Build settings
 markdown: kramdown
 
-
 collections:
   project:
     output: true
-  # thoughts:
-  #   output: true
-  # downloads:
-  #   output: true
-
