--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Christopher Muller
 email: inbox@christophermuller.net
-description: "Website and portfolio of Christopher Muller, a web developer focusing on C# and ASP.NET."
+description: "Website and portfolio of Christopher Muller, developer skilled in Swift, iOS, .Net, C#, and ASP.NET."
 url: "http://christophermuller.net" # the base hostname & protocol for your site
 twitter_username: sharlos
 github_username:  sharlos
